--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+
+    <title>Technology Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
